<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fabio.prova2parte1android.CadastraFuncionario">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idFunc"
            android:layout_gravity="center_horizontal"
            android:hint="@string/idHint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nomeFunc"
            android:layout_gravity="center_horizontal"
            android:hint="@string/nomeHint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/salarioFunc"
            android:layout_gravity="center_horizontal"
            android:hint="@string/salarioFunc"
            android:inputType="numberDecimal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idadeFunc"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:hint="@string/idadeHint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cargoFunc"
            android:layout_gravity="center_horizontal"
            android:hint="@string/cargoHint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savelbl"
            android:id="@+id/botaoSalvar"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
